--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon Mar 25 2013 21:00:45 PDT</b><br>
+    <b>Tue Mar 26 2013 21:00:42 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;XML combines all the inefficiency of text-based formats with most of the unreadability of binary formats :-) &quot; -- Oren Tirosh</i></a>
+      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
     </span>
 
 </div>
@@ -1885,51 +1885,6 @@
              bz_enhancement             bz_low             bz_NEW                                                    bz_row_even             ">
 
     <td class="first-child">
-      <a name="b286"
-         href="show_bug.cgi?id=286">286</a>
-      <span style="display: none"></span>
-    </td>
-
-    <td style="white-space: nowrap">
-        <span title="enhancement">enh
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="low">low
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="Linux">Linu
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="slony1-bugs">slony1-bugs
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="NEW">NEW
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="">
-
-      
-        </span>
-    </td>
-    <td >PG 9.3 has changed LookupExplicitNamespace to take two arguments
-    </td>
-
-  </tr>
-
-  
-
-
-  
-
-  <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_NEW                                                    bz_row_odd             ">
-
-    <td class="first-child">
       <a name="b287"
          href="show_bug.cgi?id=287">287</a>
       <span style="display: none"></span>
@@ -1972,7 +1927,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_high             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_normal             bz_high             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b80"
@@ -2017,7 +1972,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_high             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_high             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b178"
@@ -2062,7 +2017,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b176"
@@ -2107,7 +2062,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b281"
@@ -2152,7 +2107,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b128"
@@ -2197,7 +2152,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_normal             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b59"
@@ -2242,7 +2197,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b173"
@@ -2287,7 +2242,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b174"
@@ -2332,7 +2287,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b280"
@@ -2377,7 +2332,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b125"
@@ -2422,7 +2377,7 @@
   
 
   <tr class="bz_bugitem
-             bz_major             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_major             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b137"
@@ -2467,7 +2422,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b271"
@@ -2512,7 +2467,7 @@
   
 
   <tr class="bz_bugitem
-             bz_minor             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_minor             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b215"
@@ -2557,7 +2512,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b254"
@@ -2602,7 +2557,7 @@
   
 
   <tr class="bz_bugitem
-             bz_trivial             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_trivial             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b252"
@@ -2647,7 +2602,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b261"
@@ -2682,6 +2637,51 @@
         </span>
     </td>
     <td >Add health check indicating failover 'health'
+    </td>
+
+  </tr>
+
+  
+
+
+  
+
+  <tr class="bz_bugitem
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+
+    <td class="first-child">
+      <a name="b286"
+         href="show_bug.cgi?id=286">286</a>
+      <span style="display: none"></span>
+    </td>
+
+    <td style="white-space: nowrap">
+        <span title="enhancement">enh
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="low">low
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="Linux">Linu
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="ssinger">ssinger
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="ASSIGNED">ASSI
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="">
+
+      
+        </span>
+    </td>
+    <td >PG 9.3 has changed LookupExplicitNamespace to take two arguments
     </td>
 
   </tr>
@@ -2746,7 +2746,6 @@
             <input type="hidden" name="id" value="279">
             <input type="hidden" name="id" value="283">
             <input type="hidden" name="id" value="285">
-            <input type="hidden" name="id" value="286">
             <input type="hidden" name="id" value="287">
             <input type="hidden" name="id" value="80">
             <input type="hidden" name="id" value="178">
@@ -2764,6 +2763,7 @@
             <input type="hidden" name="id" value="254">
             <input type="hidden" name="id" value="252">
             <input type="hidden" name="id" value="261">
+            <input type="hidden" name="id" value="286">
           <input type="hidden" name="format" value="multiple">
           <input type="submit" id="long_format" value="Long Format">
         </form>
@@ -2804,7 +2804,6 @@
             <input type="hidden" name="id" value="279">
             <input type="hidden" name="id" value="283">
             <input type="hidden" name="id" value="285">
-            <input type="hidden" name="id" value="286">
             <input type="hidden" name="id" value="287">
             <input type="hidden" name="id" value="80">
             <input type="hidden" name="id" value="178">
@@ -2822,6 +2821,7 @@
             <input type="hidden" name="id" value="254">
             <input type="hidden" name="id" value="252">
             <input type="hidden" name="id" value="261">
+            <input type="hidden" name="id" value="286">
             <input type="hidden" name="excludefield" value="attachmentdata">
             <input type="submit" value="XML" id="xml">
         </form>
