--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Thu Mar 28 2013 21:00:34 PDT</b><br>
+    <b>Fri Mar 29 2013 21:00:30 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
+      <a href="quips.cgi"><i>No one ever says, &quot;Hey, I can't read that ASCII attachment you sent me.&quot;</i></a>
     </span>
 
 </div>
