--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Thu Mar 28 2013 21:00:32 PDT</b><br>
+    <b>Fri Mar 29 2013 21:00:29 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
+      <a href="quips.cgi"><i>&quot;I love the way  Microsoft follows standards. In  much the same manner that fish follow migrating caribou.&quot; -- Sinister Midget</i></a>
     </span>
 
 </div>
