--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sun Mar 31 2013 21:00:21 PDT</b><br>
+    <b>Mon Apr  1 2013 21:00:18 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;Very funny, Scotty. Now beam down my clothes.&quot;</i></a>
+      <a href="quips.cgi"><i>If you can't see the bright side of things, polish the dark side...</i></a>
     </span>
 
 </div>
