--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon Apr  1 2013 21:00:18 PDT</b><br>
+    <b>Tue Apr  2 2013 21:00:13 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>If you can't see the bright side of things, polish the dark side...</i></a>
+      <a href="quips.cgi"><i>&quot;My pid is Inigo Montoya.  You kill  -9 my parent process.  Prepare to vi.&quot;</i></a>
     </span>
 
 </div>
