--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Fri Apr  5 2013 21:00:00 PDT</b><br>
+    <b>Sat Apr  6 2013 20:59:56 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>The  trouble with doing something right  the first time is that nobody appreciates how difficult it was.</i></a>
+      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
     </span>
 
 </div>
