--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sat Apr  6 2013 20:59:56 PDT</b><br>
+    <b>Mon Apr  8 2013 20:59:46 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
+      <a href="quips.cgi"><i>&quot;Very funny, Scotty. Now beam down my clothes.&quot;</i></a>
     </span>
 
 </div>
