--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon Apr  8 2013 20:59:45 PDT</b><br>
+    <b>Tue Apr  9 2013 20:59:41 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
+      <a href="quips.cgi"><i>&quot;The world needs more people like us and fewer like them.&quot;</i></a>
     </span>
 
 </div>
