--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Tue Apr  9 2013 20:59:41 PDT</b><br>
+    <b>Fri Apr 12 2013 20:59:29 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;The world needs more people like us and fewer like them.&quot;</i></a>
+      <a href="quips.cgi"><i>It's always darkest just before it gets pitch black.</i></a>
     </span>
 
 </div>
@@ -259,7 +259,7 @@
 
 
 
-  <span class="bz_result_count">53 bugs found.
+  <span class="bz_result_count">54 bugs found.
   </span>
 
 
@@ -1972,7 +1972,52 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_high             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_critical             bz_low             bz_NEW                                                    bz_row_even             ">
+
+    <td class="first-child">
+      <a name="b289"
+         href="show_bug.cgi?id=289">289</a>
+      <span style="display: none"></span>
+    </td>
+
+    <td style="white-space: nowrap">
+        <span title="critical">cri
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="low">low
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="Linux">Linu
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="slony1-bugs">slony1-bugs
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="NEW">NEW
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="">
+
+      
+        </span>
+    </td>
+    <td >Invalid txid_snapshot in sl_event
+    </td>
+
+  </tr>
+
+  
+
+
+  
+
+  <tr class="bz_bugitem
+             bz_normal             bz_high             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b80"
@@ -2017,7 +2062,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_high             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_high             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b178"
@@ -2062,7 +2107,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b176"
@@ -2107,7 +2152,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b281"
@@ -2152,7 +2197,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b128"
@@ -2197,7 +2242,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_normal             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b59"
@@ -2242,7 +2287,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b173"
@@ -2287,7 +2332,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b174"
@@ -2332,7 +2377,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b280"
@@ -2377,7 +2422,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b125"
@@ -2422,7 +2467,7 @@
   
 
   <tr class="bz_bugitem
-             bz_major             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_major             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b137"
@@ -2467,7 +2512,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b271"
@@ -2512,7 +2557,7 @@
   
 
   <tr class="bz_bugitem
-             bz_minor             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_minor             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b215"
@@ -2557,7 +2602,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b254"
@@ -2602,7 +2647,7 @@
   
 
   <tr class="bz_bugitem
-             bz_trivial             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_trivial             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b252"
@@ -2647,7 +2692,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b261"
@@ -2693,7 +2738,7 @@
 
 
 
-<span class="bz_result_count">53 bugs found.
+<span class="bz_result_count">54 bugs found.
 </span>
 
 <br>
@@ -2748,6 +2793,7 @@
             <input type="hidden" name="id" value="285">
             <input type="hidden" name="id" value="287">
             <input type="hidden" name="id" value="288">
+            <input type="hidden" name="id" value="289">
             <input type="hidden" name="id" value="80">
             <input type="hidden" name="id" value="178">
             <input type="hidden" name="id" value="176">
@@ -2806,6 +2852,7 @@
             <input type="hidden" name="id" value="285">
             <input type="hidden" name="id" value="287">
             <input type="hidden" name="id" value="288">
+            <input type="hidden" name="id" value="289">
             <input type="hidden" name="id" value="80">
             <input type="hidden" name="id" value="178">
             <input type="hidden" name="id" value="176">
