--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Fri Apr 12 2013 20:59:30 PDT</b><br>
+    <b>Sat Apr 13 2013 20:59:26 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>The  trouble with doing something right  the first time is that nobody appreciates how difficult it was.</i></a>
+      <a href="quips.cgi"><i>If you can't see the bright side of things, polish the dark side...</i></a>
     </span>
 
 </div>
