--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Fri Apr 12 2013 20:59:29 PDT</b><br>
+    <b>Sat Apr 13 2013 20:59:24 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>It's always darkest just before it gets pitch black.</i></a>
+      <a href="quips.cgi"><i>Ubuntu is an ancient African word, meaning &quot;can't configure Debian&quot;</i></a>
     </span>
 
 </div>
