--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Tue Apr 16 2013 20:59:13 PDT</b><br>
+    <b>Wed Apr 17 2013 20:59:09 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>nothing</i></a>
+      <a href="quips.cgi"><i>&quot;My pid is Inigo Montoya.  You kill  -9 my parent process.  Prepare to vi.&quot;</i></a>
     </span>
 
 </div>
