--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Thu Apr 18 2013 20:59:04 PDT</b><br>
+    <b>Fri Apr 19 2013 20:59:00 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>If you can't see the bright side of things, polish the dark side...</i></a>
+      <a href="quips.cgi"><i>&quot;Let's face it  -- ASCII text is  a far richer medium  than most of us deserve.&quot;  -- Scott McNealy</i></a>
     </span>
 
 </div>
