--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sat Apr 20 2013 20:58:55 PDT</b><br>
+    <b>Sun Apr 21 2013 20:58:51 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>If you can't see the bright side of things, polish the dark side...</i></a>
+      <a href="quips.cgi"><i>&quot;The world needs more people like us and fewer like them.&quot;</i></a>
     </span>
 
 </div>
