--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sun Apr 21 2013 20:58:52 PDT</b><br>
+    <b>Mon Apr 22 2013 20:58:49 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;Very funny, Scotty. Now beam down my clothes.&quot;</i></a>
+      <a href="quips.cgi"><i>nothing</i></a>
     </span>
 
 </div>
