--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon Apr 22 2013 20:58:47 PDT</b><br>
+    <b>Tue Apr 23 2013 20:58:42 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;What we need is either less corruption, or more chance to participate in it.&quot;</i></a>
+      <a href="quips.cgi"><i>nothing</i></a>
     </span>
 
 </div>
