--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Fri Apr 26 2013 20:58:30 PDT</b><br>
+    <b>Sat Apr 27 2013 20:58:26 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;The world needs more people like us and fewer like them.&quot;</i></a>
+      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
     </span>
 
 </div>
