--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sun Apr 28 2013 20:58:23 PDT</b><br>
+    <b>Mon Apr 29 2013 20:58:18 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>nothing</i></a>
+      <a href="quips.cgi"><i>&quot;XML combines all the inefficiency of text-based formats with most of the unreadability of binary formats :-) &quot; -- Oren Tirosh</i></a>
     </span>
 
 </div>
